# nadir

./: .gitignore  README.md  pyproject.toml
src/nadir/: __init__.py  geo_calculator.py  interfaces.py  log_mapper.py  models.py  processor.py  trajectory_analyzer.py  video_log_mapper.py  video_processor.py
src/nadir/implementations/: detectors.py  frame_processor.py  geo_calculator.py  log_mapper.py  result_writer.py  trajectory_analyzer.py
tests/: conftest.py  test_hello.py
